feat: добавляет структуру html

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <title>Weather App</title>
   </head>
   <body>
-   <div id="app"></div>
+    <h1>Weather Sounds</h1>
+
+    <div class="buttons-container" id="buttons-container"></div>
+
+    <div class="volume-container">
+      <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="0.5">
+    </div>
+
   </body>
 </html>
